# wrkout_back

./: .gitignore  Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/versions/: 1cf97648ad02_init.py  4ba6a8098dfb_init.py  630f42c72fd6_init.py  993c5acc5689_init.py  dfb8044b2b5f_init.py
shop_backend_fromdocs/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_shop_backend_fromdocs.py  test_version.py
wrkout2_back/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
