[tool.poetry]
name = "wrkout2_back"
version = "0.1.0"
description = ""
authors = ["sqmch <sqmchh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.73.0"}
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"
PyJWT = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
